distcc-3.0 "The moment has arrived"   2008-08-06

  DOCUMENTATION:

   * Minor improvements to the man pages.

distcc-3.0rc4 "Pump up the volume"   2008-08-04

  BUG FIXES:

   * Fixed a bug in 3.0rc3 that broke pump mode for C++ compilations
     that use -I options that refer to a subdirectory of one of the
     default system include directories, e.g. -I/usr/include/foo.

distcc-3.0rc3 "Third time lucky?"   2008-07-31

  FEATURES:

   * New "--without-avahi" option to configure (Lei Zhang).

  BUG FIXES:

   * Fixed a problem where pump mode was falling back to local compilation
     when compiling with -I options that refer to a subdirectory of one
     of the default system include directories (Nils Klarlund, Fergus Henderson).

   * Allow distcc to distribute commands that use "-MF<filename>"
     rather than "-MF <filename>", and likewise for "-MT<target>".

  PORTABILITY:

   * Fixed a build problem on ARM and Solaris systems.

   * Fixed a build problem on some Linux systems reported by Daisuke Nishikawa.

   * Fixed failure of "make install" on Cygwin.

distcc-3.0rc2 "Anti-aliasing."   2008-06-19

  BUG FIXES:

   * Fallback to local compilation for "-march=native" or "mtune=native"
     (Maks Verver).

   * Fix for deadlock in pump mode.

distcc-3.0rc1 "My prices are insane."   2008-06-09

  FEATURES:

   * New protocol, version 3, allowing for preprocessing on distcc
     servers ("pump" mode).

   * New component: an include server for incremental static analysis of include
     dependencies.  This software is written in Python 2.4.

   * Support for getting hosts via avahi (Lennart Poettering)

  BUG FIXES:

   * gcc debug option -d must be run locally because it produces
     secondary files.  Reported by Nadim Khemir.

   * Improved checking for errors on socket connection.  Patch 
     from Dan Kegel.


  PORTABILITY:	

   * "Pump" code tested under Linux only.  Processing of object code