@@ -157,6 +157,8 @@ int dcc_x_req_header(int fd,
                      enum dcc_protover protover);
 int dcc_x_argv(int fd, char **argv);
 int dcc_x_cwd(int fd);
+int dcc_is_link(const char *fname, int *is_link);
+int dcc_read_link(const char* fname, char *points_to);
 
 /* srvrpc.c */
 int dcc_r_cwd(int ifd, char **cwd);
@@ -239,7 +241,7 @@ int dcc_compress_lzo1x_alloc(const char *in_buf,
 
 
 
-/* bulk.h */
+/* bulk.c */
 void dcc_calc_rate(off_t size_out,
                    struct timeval *before,
                    struct timeval *after,
