@@ -21,3 +21,4 @@
 
 int dcc_talk_to_include_server(char **argv, char ***files);
 int dcc_get_original_fname(const char *fname, char **original_fname);
+int dcc_approximate_includes(struct dcc_hostdef *host, char **argv);
